2005-01-23  Marcus Brinkmann  <marcus@gnu.org>

	* Initial check-in.
